# csv-parser

./: .clang_complete  .clangd  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Config.cmake.in  LICENSE  Makefile  README.md  infer.hpp  parser.hpp
.github/workflows/: ci.yml
benchmark/: Makefile  OPTIMIZATION.md  PROFILING.md  README.md  compare_results.py  generate_csv.py  main.cpp  main.js  optimize.cpp  profile.cpp  run.py
benchmark/cpp/: main.cpp
benchmark/js/: main.js  package-lock.json  package.json
benchmark/rust/: Cargo.toml
benchmark/rust/src/: main.rs
fuzz/: CMakeLists.txt  README.md  afl_parser.cpp  libfuzzer_parser.cpp  random_driver.cpp
test/: .clangd  CMakeLists.txt  Makefile  catch.hpp  infer_test.cpp  parser_test.cpp  property_test.cpp  test.cpp
test/data/: delimiter.csv  empty.csv  emptyUnquoted.csv  quote.csv  terminator.csv
